--- a/notebooks/ANN_Test.ipynb
+++ b/notebooks/ANN_Test.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from NN import network\n",
+    "from NN import network, activation_functions\n",
     "from NN import ANN\n",
     "X = np.array([[1,2],[3,4]])\n"
    ]
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +33,15 @@
      "output_type": "stream",
      "text": [
       "Hidden Layer  1\n",
-      "[[0.94128955 0.87000199 0.23345753]\n",
-      " [0.10338417 0.54883574 0.74485984]\n",
-      " [0.88917069 0.30940208 0.5131762 ]] \n",
+      "[[0.3500147  0.0554116  0.38638285]\n",
+      " [0.90794037 0.66596725 0.83736171]\n",
+      " [0.66451179 0.83011759 0.27157532]] \n",
       "\n",
       "Output Layer \n",
-      "[[0.8762694  0.07505548]\n",
-      " [0.11052754 0.76150333]\n",
-      " [0.13221709 0.40144313]\n",
-      " [0.2673966  0.48444529]] \n",
+      "[[0.89614953 0.90259349]\n",
+      " [0.37332279 0.71257345]\n",
+      " [0.29855223 0.56296959]\n",
+      " [0.2117938  0.11064486]] \n",
       "\n",
       " Input size:  2\n",
       " Number of hidden layers:  1\n",
@@ -50,12 +50,12 @@
       " Number of classes: 2 \n",
       "\n",
       "Y\n",
-      " [[1.33322165 1.57593273]\n",
-      " [1.37961167 1.70187973]]\n",
+      " [[1.69753277 2.17514933]\n",
+      " [1.77336771 2.28186117]]\n",
       "\n",
       "a(Y)\n",
-      " [[0.79137303 0.82862772]\n",
-      " [0.79892863 0.84578008]]\n"
+      " [[0.84521223 0.89799561]\n",
+      " [0.85487598 0.90736361]]\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,24 +89,28 @@
       "Model Weights\n",
       "-------------------------------\n",
       "H1       (input=2, neurons=3, activation=sigmoid)\n",
-      "[[0.94128955 0.87000199 0.23345753]\n",
-      " [0.10338417 0.54883574 0.74485984]\n",
-      " [0.88917069 0.30940208 0.5131762 ]]\n",
+      "[[0.3500147  0.0554116  0.38638285]\n",
+      " [0.90794037 0.66596725 0.83736171]\n",
+      " [0.66451179 0.83011759 0.27157532]]\n",
       "out      (input=3, neurons=2, activation=sigmoid)\n",
-      "[[0.8762694  0.07505548]\n",
-      " [0.11052754 0.76150333]\n",
-      " [0.13221709 0.40144313]\n",
-      " [0.2673966  0.48444529]]\n",
+      "[[0.89614953 0.90259349]\n",
+      " [0.37332279 0.71257345]\n",
+      " [0.29855223 0.56296959]\n",
+      " [0.2117938  0.11064486]]\n",
       "-------------------------------\n",
       "Forwardign H1 weights (2, 2) (3, 3)\n",
+      "[[2.58697864 2.38161402 1.76689519]\n",
+      " [5.73188296 5.3737837  3.98476925]]\n",
       "Forwardign out weights (2, 3) (4, 2)\n",
+      "[[1.69753277 2.17514933]\n",
+      " [1.77336771 2.28186117]]\n",
       "Y\n",
-      " [[1.33322165 1.57593273]\n",
-      " [1.37961167 1.70187973]]\n",
+      " [[1.69753277 2.17514933]\n",
+      " [1.77336771 2.28186117]]\n",
       "\n",
       "a(Y)\n",
-      " [[0.79137303 0.82862772]\n",
-      " [0.79892863 0.84578008]]\n"
+      " [[0.84521223 0.89799561]\n",
+      " [0.85487598 0.90736361]]\n"
      ]
     }
    ],
@@ -134,8 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -144,24 +150,28 @@
       "Model Weights\n",
       "-------------------------------\n",
       "H1       (input=2, neurons=3, activation=sigmoid)\n",
-      "[[0.1029446  0.68405672 0.45291936]\n",
-      " [0.3013103  0.82890018 0.3578943 ]\n",
-      " [0.87485921 0.73195107 0.00466407]]\n",
+      "[[0.82409151 0.90042209 0.9638929 ]\n",
+      " [0.49421042 0.43769098 0.1896353 ]\n",
+      " [0.91830912 0.04228651 0.80245443]]\n",
       "out      (input=3, neurons=2, activation=sigmoid)\n",
-      "[[0.37774559 0.52974304]\n",
-      " [0.77071439 0.44225777]\n",
-      " [0.69599344 0.72378758]\n",
-      " [0.78767893 0.45069178]]\n",
+      "[[0.0361892  0.09466107]\n",
+      " [0.62954744 0.29266604]\n",
+      " [0.71849885 0.88928436]\n",
+      " [0.81579539 0.83143014]]\n",
       "-------------------------------\n",
       "Forwardign H1 weights (2, 2) (3, 3)\n",
+      "[[3.15492017 1.42268609 2.75843707]\n",
+      " [5.97995925 2.38264108 4.74261654]]\n",
       "Forwardign out weights (2, 3) (4, 2)\n",
+      "[[1.98609079 1.87377373]\n",
+      " [2.13067645 2.02496951]]\n",
       "Y\n",
-      " [[2.27744522 1.92762032]\n",
-      " [2.48370548 2.06081024]]\n",
+      " [[1.98609079 1.87377373]\n",
+      " [2.13067645 2.02496951]]\n",
       "\n",
       "a(Y)\n",
-      " [[0.90699176 0.87298579]\n",
-      " [0.92299159 0.88703538]]\n"
+      " [[0.87932895 0.86689433]\n",
+      " [0.89384921 0.88339389]]\n"
      ]
     }
    ],
@@ -177,6 +187,91 @@
     "\n",
     "print(\"Y\\n\",Y)\n",
     "print(\"\\na(Y)\\n\",aY)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax Sample and Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forwardign output weights (2, 4) (5, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 5.1,  3.2, -1.7, -2. ],\n",
+       "        [ 5.1,  3.2, -1.7, -2. ]]),\n",
+       " array([[8.68426824e-01, 1.29889401e-01, 9.67232214e-04, 7.16543248e-04],\n",
+       "        [8.68426824e-01, 1.29889401e-01, 9.67232214e-04, 7.16543248e-04]]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(activation_functions)\n",
+    "reload(network)\n",
+    "layer = network.Layer(4, 4, 'softmax', label=\"output\")\n",
+    "val = np.array([[5.1, 3.2, -1.7, -2.0], [5.1, 3.2, -1.7, -2.0]])\n",
+    "\n",
+    "layer.feed_forward(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary\n",
+      "-------------------------------\n",
+      "H1      (input=2, neurons=3, activation=sigmoid)\n",
+      "output  (input=3, neurons=2, activation=sigmoid)\n",
+      "softmax (input=2, neurons=2, activation=softmax)\n",
+      "-------------------------------\n",
+      "Forwardign H1 weights (2, 2) (3, 3)\n",
+      "Forwardign output weights (2, 3) (4, 2)\n",
+      "Forwardign softmax weights (2, 2) (3, 2)\n",
+      "Y\n",
+      " [[0.90116593 0.94594083]\n",
+      " [0.91568234 0.95456725]]\n",
+      "\n",
+      "a(Y)\n",
+      " [[0.48880815 0.51119185]\n",
+      " [0.49028    0.50972   ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "reload(network)\n",
+    "model = network.NN()\n",
+    "model.add_layer(network.Layer(2, 3, 'sigmoid',  label=\"H1\"))\n",
+    "model.add_layer(network.Layer(3, 2, 'sigmoid',  label=\"output\"))\n",
+    "model.add_layer(network.Layer(2, 2, 'softmax',  label=\"softmax\"))\n",
+    "model.summary()\n",
+    "\n",
+    "Y, aY = model.feed_forward(X)\n",
+    "\n",
+    "print(\"Y\\n\",Y)\n",
+    "print(\"\\na(Y)\\n\",aY)"
    ]
   },
   {
