--- a/notebooks/ANN_Test.ipynb
+++ b/notebooks/ANN_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +33,15 @@
      "output_type": "stream",
      "text": [
       "Hidden Layer  1\n",
-      "[[0.27605372 0.1906593  0.30017076]\n",
-      " [0.88279538 0.94562778 0.34077477]\n",
-      " [0.64280095 0.65985464 0.67032014]] \n",
+      "[[0.94873394 0.11414162 0.55954911]\n",
+      " [0.58339539 0.53380147 0.94712821]\n",
+      " [0.64962293 0.17700522 0.44960808]] \n",
       "\n",
       "Output Layer \n",
-      "[[0.59598795 0.87561001]\n",
-      " [0.26656552 0.01072513]\n",
-      " [0.45661502 0.13918876]\n",
-      " [0.96476747 0.11160428]] \n",
+      "[[0.89201452 0.8027576 ]\n",
+      " [0.98750924 0.8081617 ]\n",
+      " [0.52182774 0.93853488]\n",
+      " [0.96373231 0.53303754]] \n",
       "\n",
       " Input size:  2\n",
       " Number of hidden layers:  1\n",
@@ -50,12 +50,12 @@
       " Number of classes: 2 \n",
       "\n",
       "Y\n",
-      " [[2.10969738 1.1117549 ]\n",
-      " [2.2639843  1.13460472]]\n",
+      " [[3.09026194 2.74137004]\n",
+      " [3.31240253 2.99915082]]\n",
       "\n",
       "a(Y)\n",
-      " [[0.89184215 0.75245614]\n",
-      " [0.90584999 0.75668768]]\n"
+      " [[0.95648927 0.93942411]\n",
+      " [0.96485185 0.95253575]]\n"
      ]
     }
    ],
@@ -79,16 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H1 (1, 2) (2, 2)\n",
-      "net [[0.3775 0.3925]]\n",
-      "out [[0.59326999 0.59688438]]\n",
       "[[0.3775 0.3925]]\n",
       "[[0.59326999 0.59688438]]\n"
      ]
@@ -100,14 +97,14 @@
     "I = np.array([[0.05, 0.10]])\n",
     "W = np.array([[0.15, 0.2], [0.25, 0.3]]).T\n",
     "h1 = network.Layer(2, 2, 'sigmoid', weights=W, bias=0.35, label=\"H1\")\n",
-    "net, out =  h1.feed_forward(I)\n",
-    "print(net)\n",
-    "print(out)"
+    "netH, outH =  h1.feed_forward(I)\n",
+    "print(netH)\n",
+    "print(outH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -116,9 +113,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H1 (1, 2) (2, 2)\n",
-      "net [[1.10590597 1.2249214 ]]\n",
-      "out [[0.75136507 0.77292847]]\n",
       "[[1.10590597 1.2249214 ]]\n",
       "[[0.75136507 0.77292847]]\n"
      ]
@@ -130,58 +124,45 @@
     "I = np.array([[0.59326999, 0.59688438]])\n",
     "W = np.array([[0.4, 0.45], [0.50, 0.55]]).T\n",
     "o1 = network.Layer(2, 2, 'sigmoid', weights=W, bias=0.6, label=\"H1\")\n",
-    "net, out =  o1.feed_forward(I)\n",
-    "print(net)\n",
-    "print(out)"
+    "netO, outO =  o1.feed_forward(I)\n",
+    "print(netO)\n",
+    "print(outO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Weights\n",
-      "-------------------------------\n",
-      "H1      (input=2, neurons=2, activation=sigmoid)\n",
-      "[[0.15 0.25]\n",
-      " [0.2  0.3 ]]\n",
-      "H1      (input=2, neurons=2, activation=sigmoid)\n",
-      "[[0.4  0.5 ]\n",
-      " [0.45 0.55]]\n",
-      "-------------------------------\n",
-      "H1 (1, 2) (2, 2)\n",
-      "net [[0.3775 0.3925]]\n",
-      "out [[0.59326999 0.59688438]]\n",
-      "H1 (1, 2) (2, 2)\n",
-      "net [[1.10590597 1.2249214 ]]\n",
-      "out [[0.75136507 0.77292847]]\n",
       "Y\n",
-      " [[1.10590597 1.2249214 ]]\n",
+      " [1.10590597, 1.2249214]\n",
       "\n",
       "a(Y)\n",
-      " [[0.75136507 0.77292847]]\n"
+      " [0.75136507, 0.77292847]\n"
      ]
     }
    ],
    "source": [
     "from importlib import reload\n",
     "reload(network)\n",
-    "model = network.NN(loss='mse')\n",
+    "model = network.NN(loss='smd')\n",
     "X = np.array([[0.05, 0.10]])\n",
-    "Wh1 = np.array([[0.15, 0.2], [0.25, 0.3]]).T\n",
-    "h1 = network.Layer(2, 2, 'sigmoid', weights=Wh1, bias=0.35, label=\"H1\")\n",
-    "Wo1 = np.array([[0.4, 0.45], [0.50, 0.55]]).T\n",
-    "o1 = network.Layer(2, 2, 'sigmoid', weights=Wo1, bias=0.6, label=\"H1\")\n",
-    "model.add_layer(h1)\n",
-    "model.add_layer(o1)\n",
+    "\n",
+    "Wh = np.array([[0.15, 0.2], [0.25, 0.3]]).T\n",
+    "h = network.Layer(2, 2, 'sigmoid', weights=Wh, bias=0.35, label=\"H1\")\n",
+    "\n",
+    "Wo = np.array([[0.4, 0.45], [0.50, 0.55]]).T\n",
+    "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"H1\")\n",
+    "model.add_layer(h)\n",
+    "model.add_layer(o)\n",
     "model.show_weights()\n",
     "\n",
-    "Y_, aY_ = model.feed_forward(X)\n",
-    "Y, aY = ([1.10590597, 1.2249214 ], [0.75136507, 0.77292847])\n",
+    "Y, aY = model.feed_forward(X)\n",
+    "Y_, aY_ = ([1.10590597, 1.2249214 ], [0.75136507, 0.77292847])\n",
     "print(\"Y\\n\",Y_)\n",
     "print(\"\\na(Y)\\n\",aY_)\n",
     "\n",
@@ -190,12 +171,242 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 148,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### "
+    "## Working on the back propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2983711087600027\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "reload(network)\n",
+    "model.show_weights()\n",
+    "Y = np.array([0.01, 0.99])\n",
+    "Etotal = loss_functions.smd(aY, Y)\n",
+    "print(Etotal)\n",
+    "assert((Etotal - 0.2983711) < np.finfo(np.float32).eps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Emulating the weights update for the layer O "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.74136507 -0.21707153]]\n",
+      "dout [[0.1868156  0.17551005]]\n",
+      "dnet [[0.59326999 0.59688438]]\n",
+      "delta [[ 0.13849856 -0.03809824]]\n",
+      "dw [[ 0.08216704 -0.02274024]]\n",
+      "update [[0.35891648 0.51137012]\n",
+      " [0.40891648 0.56137012]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
+    "lr = 0.5\n",
+    "#Done - Partial\n",
+    "dEo_dw = loss_functions.smd_derivative_chain(outO, Y)\n",
+    "print(dEo_dw)\n",
+    "\n",
+    "# Done\n",
+    "dOuto_Dneto = activation_functions.sigmoid_derivative_chain(outO)\n",
+    "print('dout',dOuto_Dneto)\n",
+    "\n",
+    "# Done - Self.input\n",
+    "dNeto  = outH\n",
+    "print('dnet',dNeto) \n",
+    "# Done\n",
+    "deltaO  = dEo_dw * dOuto_Dneto\n",
+    "print('delta', deltaO)\n",
+    "\n",
+    "dWO = deltaO * outH\n",
+    "print('dw', dWO)\n",
+    "# Done\n",
+    "updateO = Wo - lr * dWO\n",
+    "print('update', updateO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.05539942 -0.01904912]\n",
+      " [ 0.06232435 -0.02095403]]\n",
+      "dETotal_dOh [0.03635031 0.04137032]\n",
+      "dOuth_Dneth [[0.24130071 0.24061342]]\n",
+      "deltaH [[0.00877135 0.00995425]]\n",
+      "dWh [[0.00043857 0.00099543]]\n",
+      "update [[0.14978072 0.24950229]\n",
+      " [0.19978072 0.29950229]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Done - Partial\n",
+    "dEo_dOh = deltaO * Wo\n",
+    "dETotal_dOh = dEo_dOh.sum(axis=1)\n",
+    "print (dEo_dOh)\n",
+    "print('dETotal_dOh', dETotal_dOh)\n",
+    "\n",
+    "# Done\n",
+    "dOuth_Dneth = activation_functions.sigmoid_derivative_chain(outH)\n",
+    "print('dOuth_Dneth', dOuth_Dneth)\n",
+    "\n",
+    "\n",
+    "# Done\n",
+    "deltaH = dETotal_dOh * dOuth_Dneth \n",
+    "print('deltaH', deltaH)\n",
+    "\n",
+    "# done\n",
+    "# self.input\n",
+    "dNeth_dw = X\n",
+    "dWh = deltaH * dNeth_dw\n",
+    "print('dWh', dWh)\n",
+    "\n",
+    "# Done\n",
+    "updateH = Wh - lr * dWh\n",
+    "print('update', updateH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.2983711087600027\n",
+      "1000 0.0011202377365627065\n",
+      "2000 0.00044785141631775586\n",
+      "3000 0.00025349028036380844\n",
+      "4000 0.00016571865888432704\n",
+      "5000 0.00011734553835230822\n",
+      "6000 8.7442721889668e-05\n",
+      "7000 6.75166200528868e-05\n",
+      "8000 5.351545683205839e-05\n",
+      "9000 4.32812038815559e-05\n",
+      "10000 3.556829373023961e-05\n",
+      "11000 2.961232064457121e-05\n",
+      "12000 2.4920877822775443e-05\n",
+      "13000 2.1164068391319185e-05\n",
+      "14000 1.8113574397803993e-05\n",
+      "15000 1.5607002184429376e-05\n",
+      "16000 1.3526123820153284e-05\n",
+      "17000 1.1783116670472732e-05\n",
+      "18000 1.0311590002491457e-05\n",
+      "19000 9.060575063147334e-06\n",
+      "20000 7.990404544484642e-06\n",
+      "21000 7.06982827068485e-06\n",
+      "22000 6.273956558913241e-06\n",
+      "23000 5.5827692280249095e-06\n",
+      "24000 4.980018389688318e-06\n",
+      "25000 4.4524099926329095e-06\n",
+      "26000 3.988985709203115e-06\n",
+      "27000 3.5806508172542315e-06\n",
+      "28000 3.2198098315234526e-06\n",
+      "29000 2.9000825910317485e-06\n",
+      "30000 2.6160810729356184e-06\n",
+      "31000 2.363232500467144e-06\n",
+      "32000 2.137638070648829e-06\n",
+      "33000 1.935959325743895e-06\n",
+      "34000 1.7553261514852517e-06\n",
+      "35000 1.5932618224011568e-06\n",
+      "36000 1.4476215793258673e-06\n",
+      "37000 1.3165420201818315e-06\n",
+      "38000 1.1983991853592908e-06\n",
+      "39000 1.0917736752401948e-06\n",
+      "40000 9.954214868709007e-07\n",
+      "41000 9.082495263430995e-07\n",
+      "42000 8.29294962815346e-07\n",
+      "43000 7.577077537539029e-07\n",
+      "44000 6.92735799676023e-07\n",
+      "45000 6.337122884861457e-07\n",
+      "46000 5.800448704572433e-07\n",
+      "47000 5.31206369656754e-07\n",
+      "48000 4.867267896258315e-07\n",
+      "49000 4.461864131288249e-07\n",
+      "[[0.01064666 0.98936729]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
+    "reload(network)\n",
+    "network.DEBUG = False\n",
+    "\n",
+    "X = np.array([[0.05, 0.10]], np.float64)\n",
+    "\n",
+    "Wh = np.array([[0.15, 0.2], [0.25, 0.3]], np.float64).T\n",
+    "h = network.Layer(2, 2, 'sigmoid', weights=Wh, bias=0.35, label=\"H1\")\n",
+    "\n",
+    "Wo = np.array([[0.4, 0.45], [0.50, 0.55]], np.float64).T\n",
+    "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"H1\")\n",
+    "Y = np.array([0.01, 0.99], np.float64)\n",
+    "\n",
+    "for i in range(50000):\n",
+    "    netH, outH = h.feed_forward(X)\n",
+    "#     print(netH, outH)\n",
+    "    netO, outO = o.feed_forward(outH)\n",
+    "#     print(netO, outO)\n",
+    "    \n",
+    "    Etotal = loss_functions.smd(outO, Y)\n",
+    "    if (i % 1000) == 0:\n",
+    "        print(i, Etotal)\n",
+    "    \n",
+    "    dEo_dw = loss_functions.smd_derivative_chain(outO, Y)\n",
+    "    network.dprint(dEo_dw)\n",
+    "    network.dprint (\"\")\n",
+    "    network.dprint (\"==========================================\")\n",
+    "    network.dprint (\"Back Propagate Layer O\")\n",
+    "    network.dprint (\"==========================================\")\n",
+    "    o.backpropagate(dETotal_dOut=dEo_dw)\n",
+    "    network.dprint (\"==========================================\")\n",
+    "    network.dprint (\"\")\n",
+    "\n",
+    "    network.dprint (\"==========================================\")\n",
+    "    network.dprint (\"Back Propagate Layer H\")\n",
+    "    network.dprint (\"==========================================\")\n",
+    "    h.backpropagate(output_layer=o)\n",
+    "    network.dprint (\"==========================================\")\n",
+    "\n",
+    "print (outO)"
    ]
   },
   {
@@ -214,39 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Weights\n",
-      "-------------------------------\n",
-      "H1      (input=2, neurons=5, activation=sigmoid)\n",
-      "[[0.15986824 0.78072515 0.15652473 0.39257536 0.409696  ]\n",
-      " [0.93212521 0.50905525 0.61632734 0.81478519 0.29754673]]\n",
-      "output  (input=5, neurons=2, activation=sigmoid)\n",
-      "[[0.41174386 0.26122794]\n",
-      " [0.15697582 0.3219758 ]\n",
-      " [0.11543481 0.6027406 ]\n",
-      " [0.20306723 0.40751777]\n",
-      " [0.25848853 0.05099097]]\n",
-      "-------------------------------\n",
-      "H1 (1, 2) (2, 5)\n",
-      "net [[1.10120593 1.08994178 1.06945897 1.10110729 1.05023947]]\n",
-      "out [[0.75048599 0.74837076 0.74449401 0.75046752 0.74082088]]\n",
-      "output (1, 5) (5, 2)\n",
-      "net [[1.85631369 2.22934598]]\n",
-      "out [[0.8648667  0.90285401]]\n",
-      "Y\n",
-      " [[1.85631369 2.22934598]]\n",
-      "\n",
-      "a(Y)\n",
-      " [[0.8648667  0.90285401]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from importlib import reload\n",
     "reload(network)\n",
@@ -277,80 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [ 2.7  8.1 16.2]\n",
-      "1 [ 2.48  7.44 14.88]\n",
-      "2 [ 2.282  6.846 13.692]\n",
-      "3 [ 2.1038  6.3114 12.6228]\n",
-      "4 [ 1.94342  5.83026 11.66052]\n",
-      "5 [ 1.799078  5.397234 10.794468]\n",
-      "6 [ 1.6691702  5.0075106 10.0150212]\n",
-      "7 [1.55225318 4.65675954 9.31351908]\n",
-      "8 [1.44702786 4.34108359 8.68216717]\n",
-      "9 [1.35232508 4.05697523 8.11395045]\n",
-      "10 [1.26709257 3.8012777  7.60255541]\n",
-      "11 [1.19038331 3.57114993 7.14229987]\n",
-      "12 [1.12134498 3.36403494 6.72806988]\n",
-      "13 [1.05921048 3.17763145 6.35526289]\n",
-      "14 [1.00328943 3.0098683  6.0197366 ]\n",
-      "15 [0.95296049 2.85888147 5.71776294]\n",
-      "16 [0.90766444 2.72299332 5.44598665]\n",
-      "17 [0.866898   2.60069399 5.20138798]\n",
-      "18 [0.8302082  2.49062459 4.98124919]\n",
-      "19 [0.79718738 2.39156213 4.78312427]\n",
-      "20 [0.76746864 2.30240592 4.60481184]\n",
-      "21 [0.74072178 2.22216533 4.44433066]\n",
-      "22 [0.7166496  2.1499488  4.29989759]\n",
-      "23 [0.69498464 2.08495392 4.16990783]\n",
-      "24 [0.67548617 2.02645852 4.05291705]\n",
-      "25 [0.65793756 1.97381267 3.94762534]\n",
-      "26 [0.6421438  1.9264314  3.85286281]\n",
-      "27 [0.62792942 1.88378826 3.76757653]\n",
-      "28 [0.61513648 1.84540944 3.69081888]\n",
-      "29 [0.60362283 1.81086849 3.62173699]\n",
-      "30 [0.59326055 1.77978164 3.55956329]\n",
-      "31 [0.58393449 1.75180348 3.50360696]\n",
-      "32 [0.57554104 1.72662313 3.45324626]\n",
-      "33 [0.56798694 1.70396082 3.40792164]\n",
-      "34 [0.56118825 1.68356474 3.36712947]\n",
-      "35 [0.55506942 1.66520826 3.33041653]\n",
-      "36 [0.54956248 1.64868744 3.29737487]\n",
-      "37 [0.54460623 1.63381869 3.26763739]\n",
-      "38 [0.54014561 1.62043682 3.24087365]\n",
-      "39 [0.53613105 1.60839314 3.21678628]\n",
-      "40 [0.53251794 1.59755383 3.19510765]\n",
-      "41 [0.52926615 1.58779844 3.17559689]\n",
-      "42 [0.52633953 1.5790186  3.1580372 ]\n",
-      "43 [0.52370558 1.57111674 3.14223348]\n",
-      "44 [0.52133502 1.56400507 3.12801013]\n",
-      "45 [0.51920152 1.55760456 3.11520912]\n",
-      "46 [0.51728137 1.5518441  3.10368821]\n",
-      "47 [0.51555323 1.54665969 3.09331939]\n",
-      "48 [0.51399791 1.54199372 3.08398745]\n",
-      "49 [0.51259812 1.53779435 3.0755887 ]\n",
-      "50 [0.51133831 1.53401492 3.06802983]\n",
-      "51 [0.51020447 1.53061342 3.06122685]\n",
-      "52 [0.50918403 1.52755208 3.05510416]\n",
-      "53 [0.50826562 1.52479687 3.04959375]\n",
-      "54 [0.50743906 1.52231719 3.04463437]\n",
-      "55 [0.50669516 1.52008547 3.04017094]\n",
-      "56 [0.50602564 1.51807692 3.03615384]\n",
-      "57 [0.50542308 1.51626923 3.03253846]\n",
-      "58 [0.50488077 1.51464231 3.02928461]\n",
-      "59 [0.50439269 1.51317808 3.02635615]\n",
-      "60 [0.50395342 1.51186027 3.02372054]\n",
-      "61 [0.50355808 1.51067424 3.02134848]\n",
-      "62 [0.50320227 1.50960682 3.01921363]\n",
-      "63 [0.50288205 1.50864614 3.01729227]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
@@ -381,19 +491,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [ 2.7  8.1 16.2]\n",
-      "1 [0.423 1.269 2.538]\n",
-      "2 [0.502695 1.508085 3.01617 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
@@ -421,19 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [ 2.7  8.1 16.2]\n",
-      "1 [0.423 1.269 2.538]\n",
-      "2 [0.502695 1.508085 3.01617 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
