Fnished some tests with the model fit and added to ANN Test

--- a/notebooks/ANN_Test.ipynb
+++ b/notebooks/ANN_Test.ipynb
@@ -33,15 +33,15 @@
      "output_type": "stream",
      "text": [
       "Hidden Layer  1\n",
-      "[[0.94873394 0.11414162 0.55954911]\n",
-      " [0.58339539 0.53380147 0.94712821]\n",
-      " [0.64962293 0.17700522 0.44960808]] \n",
+      "[[0.49910255 0.86853766 0.20175092]\n",
+      " [0.13500897 0.05661088 0.88562919]\n",
+      " [0.85720335 0.45729096 0.08389379]] \n",
       "\n",
       "Output Layer \n",
-      "[[0.89201452 0.8027576 ]\n",
-      " [0.98750924 0.8081617 ]\n",
-      " [0.52182774 0.93853488]\n",
-      " [0.96373231 0.53303754]] \n",
+      "[[0.41656271 0.64751417]\n",
+      " [0.13480829 0.22349019]\n",
+      " [0.46602173 0.02845841]\n",
+      " [0.81667544 0.20098056]] \n",
       "\n",
       " Input size:  2\n",
       " Number of hidden layers:  1\n",
@@ -50,12 +50,12 @@
       " Number of classes: 2 \n",
       "\n",
       "Y\n",
-      " [[3.09026194 2.74137004]\n",
-      " [3.31240253 2.99915082]]\n",
+      " [[1.57728714 1.0324786 ]\n",
+      " [1.77509366 1.0881012 ]]\n",
       "\n",
       "a(Y)\n",
-      " [[0.95648927 0.93942411]\n",
-      " [0.96485185 0.95253575]]\n"
+      " [[0.82881997 0.73739614]\n",
+      " [0.85508998 0.748024  ]]\n"
      ]
     }
    ],
@@ -302,7 +302,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 7, 6, 5, 4, 3, 2, 1, 0]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(8, -1, -1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Layer by Layer testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -321,47 +348,7 @@
       "7000 error 6.75166200528868e-05\n",
       "8000 error 5.351545683205839e-05\n",
       "9000 error 4.32812038815559e-05\n",
-      "10000 error 3.556829373023961e-05\n",
-      "11000 error 2.961232064457121e-05\n",
-      "12000 error 2.4920877822775443e-05\n",
-      "13000 error 2.1164068391319185e-05\n",
-      "14000 error 1.8113574397803993e-05\n",
-      "15000 error 1.5607002184429376e-05\n",
-      "16000 error 1.3526123820153284e-05\n",
-      "17000 error 1.1783116670472732e-05\n",
-      "18000 error 1.0311590002491457e-05\n",
-      "19000 error 9.060575063147334e-06\n",
-      "20000 error 7.990404544484642e-06\n",
-      "21000 error 7.06982827068485e-06\n",
-      "22000 error 6.273956558913241e-06\n",
-      "23000 error 5.5827692280249095e-06\n",
-      "24000 error 4.980018389688318e-06\n",
-      "25000 error 4.4524099926329095e-06\n",
-      "26000 error 3.988985709203115e-06\n",
-      "27000 error 3.5806508172542315e-06\n",
-      "28000 error 3.2198098315234526e-06\n",
-      "29000 error 2.9000825910317485e-06\n",
-      "30000 error 2.6160810729356184e-06\n",
-      "31000 error 2.363232500467144e-06\n",
-      "32000 error 2.137638070648829e-06\n",
-      "33000 error 1.935959325743895e-06\n",
-      "34000 error 1.7553261514852517e-06\n",
-      "35000 error 1.5932618224011568e-06\n",
-      "36000 error 1.4476215793258673e-06\n",
-      "37000 error 1.3165420201818315e-06\n",
-      "38000 error 1.1983991853592908e-06\n",
-      "39000 error 1.0917736752401948e-06\n",
-      "40000 error 9.954214868709007e-07\n",
-      "41000 error 9.082495263430995e-07\n",
-      "42000 error 8.29294962815346e-07\n",
-      "43000 error 7.577077537539029e-07\n",
-      "44000 error 6.92735799676023e-07\n",
-      "45000 error 6.337122884861457e-07\n",
-      "46000 error 5.800448704572433e-07\n",
-      "47000 error 5.31206369656754e-07\n",
-      "48000 error 4.867267896258315e-07\n",
-      "49000 error 4.461864131288249e-07\n",
-      "[[0.01064666 0.98936729]]\n"
+      "[[0.01600365 0.98407495]]\n"
      ]
     }
    ],
@@ -380,7 +367,7 @@
     "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"H1\")\n",
     "Y = np.array([0.01, 0.99], np.float64)\n",
     "\n",
-    "for i in range(50000):\n",
+    "for i in range(10000):\n",
     "    netH, outH = h.feed_forward(X)\n",
     "#     print(netH, outH)\n",
     "    netO, outO = o.feed_forward(outH)\n",
@@ -413,6 +400,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Full Model Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 0.008"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It: 1 Batch: 1 Epoch 0 Error: 0.29837111 lr: 0.50000000 \n",
+      "Finished \n",
+      " It: 209 Batch: 1 Epoch 208 Train Loss: 0.00795372 lr: 0.50000000 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-2.11785483,  2.31889592]]), array([[0.1073735 , 0.91042995]]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from utils import dataset_helper\n",
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
+    "reload(network)\n",
+    "reload(dataset_helper)\n",
+    "network.DEBUG = False\n",
+    "\n",
+    "X = np.array([[0.05, 0.10]], np.float64)\n",
+    "Y = np.array([[0.01, 0.99]], np.float64)\n",
+    "\n",
+    "Wh = np.array([[0.15, 0.2], [0.25, 0.3]], np.float64).T\n",
+    "h = network.Layer(2, 2, 'sigmoid', weights=Wh, bias=0.35, label=\"H1\")\n",
+    "\n",
+    "Wo = np.array([[0.4, 0.45], [0.50, 0.55]], np.float64).T\n",
+    "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"Output\")\n",
+    "\n",
+    "model = network.NN(loss='smd')\n",
+    "model.add_layer(h)\n",
+    "model.add_layer(o)\n",
+    "model.show_weights()\n",
+    "\n",
+    "model.fit(X, Y, max_iter=50000, \n",
+    "          lr=0.5, epsilon=eps, \n",
+    "          print_interval=2000)\n",
+    "model.feed_forward(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Random initialization"
    ]
   },
@@ -425,21 +483,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It: 1 Batch: 1 Epoch 0 Error: 1.65052853 lr: 0.50000000 \n",
+      "It: 2000 Batch: 1 Epoch 1999 Error: 0.13206266 lr: 0.50000000 \n",
+      "It: 4000 Batch: 1 Epoch 3999 Error: 0.12137317 lr: 0.50000000 \n",
+      "It: 6000 Batch: 1 Epoch 5999 Error: 0.11759200 lr: 0.50000000 \n",
+      "It: 8000 Batch: 1 Epoch 7999 Error: 0.11570863 lr: 0.50000000 \n",
+      "It: 10000 Batch: 1 Epoch 9999 Error: 0.11461245 lr: 0.50000000 \n",
+      "It: 12000 Batch: 1 Epoch 11999 Error: 0.11391401 lr: 0.50000000 \n",
+      "It: 14000 Batch: 1 Epoch 13999 Error: 0.11344174 lr: 0.50000000 \n",
+      "It: 16000 Batch: 1 Epoch 15999 Error: 0.11310871 lr: 0.50000000 \n",
+      "It: 18000 Batch: 1 Epoch 17999 Error: 0.11286639 lr: 0.50000000 \n",
+      "It: 20000 Batch: 1 Epoch 19999 Error: 0.11268576 lr: 0.50000000 \n",
+      "It: 22000 Batch: 1 Epoch 21999 Error: 0.11254852 lr: 0.50000000 \n",
+      "It: 24000 Batch: 1 Epoch 23999 Error: 0.11244259 lr: 0.50000000 \n",
+      "It: 26000 Batch: 1 Epoch 25999 Error: 0.11235979 lr: 0.50000000 \n",
+      "It: 28000 Batch: 1 Epoch 27999 Error: 0.11229435 lr: 0.50000000 \n",
+      "It: 30000 Batch: 1 Epoch 29999 Error: 0.11224217 lr: 0.50000000 \n",
+      "It: 32000 Batch: 1 Epoch 31999 Error: 0.11220022 lr: 0.50000000 \n",
+      "It: 34000 Batch: 1 Epoch 33999 Error: 0.11216628 lr: 0.50000000 \n",
+      "It: 36000 Batch: 1 Epoch 35999 Error: 0.11213865 lr: 0.50000000 \n",
+      "It: 38000 Batch: 1 Epoch 37999 Error: 0.11211604 lr: 0.50000000 \n",
+      "It: 40000 Batch: 1 Epoch 39999 Error: 0.11209746 lr: 0.50000000 \n",
+      "It: 42000 Batch: 1 Epoch 41999 Error: 0.11208213 lr: 0.50000000 \n",
+      "It: 44000 Batch: 1 Epoch 43999 Error: 0.11206943 lr: 0.50000000 \n",
+      "It: 46000 Batch: 1 Epoch 45999 Error: 0.11205888 lr: 0.50000000 \n",
+      "It: 48000 Batch: 1 Epoch 47999 Error: 0.11205009 lr: 0.50000000 \n",
+      "It: 50000 Batch: 1 Epoch 49999 Error: 0.11204274 lr: 0.50000000 \n",
+      "Finished \n",
+      " It: 50000 Batch: 1 Epoch 49999 Train Loss: 0.11204274 lr: 0.50000000 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-4.53180808,  4.53313307]]), array([[0.01064663, 0.98936732]]))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from importlib import reload\n",
+    "from utils import dataset_helper\n",
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
     "reload(network)\n",
-    "model = network.NN(loss='cross_entropy')\n",
-    "model.add_layer(network.Layer(2, 5, 'sigmoid',  label=\"H1\"))\n",
-    "model.add_layer(network.Layer(5, 2, 'sigmoid',  label=\"output\"))\n",
-    "model.show_weights()\n",
-    "X = np.array([[0.05, 0.10]])\n",
-    "Y, aY = model.feed_forward(X)\n",
+    "reload(dataset_helper)\n",
+    "network.DEBUG = False\n",
     "\n",
-    "print(\"Y\\n\",Y)\n",
-    "print(\"\\na(Y)\\n\",aY)"
+    "X = np.array([[0.05, 0.10]], np.float64)\n",
+    "Y = np.array([[0.01, 0.99]], np.float64)\n",
+    "\n",
+    "Wh = np.array([[0.15, 0.2], [0.25, 0.3]], np.float64).T\n",
+    "h = network.Layer(2, 2, 'sigmoid', weights=Wh, bias=0.35, label=\"H1\")\n",
+    "\n",
+    "Wo = np.array([[0.4, 0.45], [0.50, 0.55]], np.float64).T\n",
+    "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"Output\")\n",
+    "\n",
+    "model = network.NN(loss='cross_entropy')\n",
+    "model.add_layer(h)\n",
+    "model.add_layer(o)\n",
+    "model.show_weights()\n",
+    "\n",
+    "model.fit(X, Y, max_iter=50000, \n",
+    "          lr=0.5, epsilon=eps, \n",
+    "          print_interval=2000)\n",
+    "model.feed_forward(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It: 1 Batch: 1 Epoch 0 Error: 0.29837111 lr: 0.50000000 \n",
+      "Finished \n",
+      " It: 104 Batch: 1 Epoch 103 Train Loss: 0.00799325 lr: 0.50000000 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-2.11897627,  2.31855525]]), array([[0.10726606, 0.91040216]]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from utils import dataset_helper\n",
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
+    "reload(network)\n",
+    "reload(dataset_helper)\n",
+    "network.DEBUG = False\n",
+    "\n",
+    "X = np.array([[0.05, 0.10]], np.float64)\n",
+    "Y = np.array([[0.01, 0.99]], np.float64)\n",
+    "\n",
+    "Wh = np.array([[0.15, 0.2], [0.25, 0.3]], np.float64).T\n",
+    "h = network.Layer(2, 2, 'sigmoid', weights=Wh, bias=0.35, label=\"H1\")\n",
+    "\n",
+    "Wo = np.array([[0.4, 0.45], [0.50, 0.55]], np.float64).T\n",
+    "o = network.Layer(2, 2, 'sigmoid', weights=Wo, bias=0.6, label=\"Output\")\n",
+    "\n",
+    "model = network.NN(loss='mse')\n",
+    "model.add_layer(h)\n",
+    "model.add_layer(o)\n",
+    "model.show_weights()\n",
+    "\n",
+    "model.fit(X, Y, max_iter=50000, \n",
+    "          lr=0.5, epsilon=eps, \n",
+    "          print_interval=2000)\n",
+    "model.feed_forward(X)"
    ]
   },
   {
@@ -458,9 +628,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [ 2.7  8.1 16.2]\n",
+      "1 [ 2.48  7.44 14.88]\n",
+      "2 [ 2.282  6.846 13.692]\n",
+      "3 [ 2.1038  6.3114 12.6228]\n",
+      "4 [ 1.94342  5.83026 11.66052]\n",
+      "5 [ 1.799078  5.397234 10.794468]\n",
+      "6 [ 1.6691702  5.0075106 10.0150212]\n",
+      "7 [1.55225318 4.65675954 9.31351908]\n",
+      "8 [1.44702786 4.34108359 8.68216717]\n",
+      "9 [1.35232508 4.05697523 8.11395045]\n",
+      "10 [1.26709257 3.8012777  7.60255541]\n",
+      "11 [1.19038331 3.57114993 7.14229987]\n",
+      "12 [1.12134498 3.36403494 6.72806988]\n",
+      "13 [1.05921048 3.17763145 6.35526289]\n",
+      "14 [1.00328943 3.0098683  6.0197366 ]\n",
+      "15 [0.95296049 2.85888147 5.71776294]\n",
+      "16 [0.90766444 2.72299332 5.44598665]\n",
+      "17 [0.866898   2.60069399 5.20138798]\n",
+      "18 [0.8302082  2.49062459 4.98124919]\n",
+      "19 [0.79718738 2.39156213 4.78312427]\n",
+      "20 [0.76746864 2.30240592 4.60481184]\n",
+      "21 [0.74072178 2.22216533 4.44433066]\n",
+      "22 [0.7166496  2.1499488  4.29989759]\n",
+      "23 [0.69498464 2.08495392 4.16990783]\n",
+      "24 [0.67548617 2.02645852 4.05291705]\n",
+      "25 [0.65793756 1.97381267 3.94762534]\n",
+      "26 [0.6421438  1.9264314  3.85286281]\n",
+      "27 [0.62792942 1.88378826 3.76757653]\n",
+      "28 [0.61513648 1.84540944 3.69081888]\n",
+      "29 [0.60362283 1.81086849 3.62173699]\n",
+      "30 [0.59326055 1.77978164 3.55956329]\n",
+      "31 [0.58393449 1.75180348 3.50360696]\n",
+      "32 [0.57554104 1.72662313 3.45324626]\n",
+      "33 [0.56798694 1.70396082 3.40792164]\n",
+      "34 [0.56118825 1.68356474 3.36712947]\n",
+      "35 [0.55506942 1.66520826 3.33041653]\n",
+      "36 [0.54956248 1.64868744 3.29737487]\n",
+      "37 [0.54460623 1.63381869 3.26763739]\n",
+      "38 [0.54014561 1.62043682 3.24087365]\n",
+      "39 [0.53613105 1.60839314 3.21678628]\n",
+      "40 [0.53251794 1.59755383 3.19510765]\n",
+      "41 [0.52926615 1.58779844 3.17559689]\n",
+      "42 [0.52633953 1.5790186  3.1580372 ]\n",
+      "43 [0.52370558 1.57111674 3.14223348]\n",
+      "44 [0.52133502 1.56400507 3.12801013]\n",
+      "45 [0.51920152 1.55760456 3.11520912]\n",
+      "46 [0.51728137 1.5518441  3.10368821]\n",
+      "47 [0.51555323 1.54665969 3.09331939]\n",
+      "48 [0.51399791 1.54199372 3.08398745]\n",
+      "49 [0.51259812 1.53779435 3.0755887 ]\n",
+      "50 [0.51133831 1.53401492 3.06802983]\n",
+      "51 [0.51020447 1.53061342 3.06122685]\n",
+      "52 [0.50918403 1.52755208 3.05510416]\n",
+      "53 [0.50826562 1.52479687 3.04959375]\n",
+      "54 [0.50743906 1.52231719 3.04463437]\n",
+      "55 [0.50669516 1.52008547 3.04017094]\n",
+      "56 [0.50602564 1.51807692 3.03615384]\n",
+      "57 [0.50542308 1.51626923 3.03253846]\n",
+      "58 [0.50488077 1.51464231 3.02928461]\n",
+      "59 [0.50439269 1.51317808 3.02635615]\n",
+      "60 [0.50395342 1.51186027 3.02372054]\n",
+      "61 [0.50355808 1.51067424 3.02134848]\n",
+      "62 [0.50320227 1.50960682 3.01921363]\n",
+      "63 [0.50288205 1.50864614 3.01729227]\n"
+     ]
+    }
+   ],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
@@ -491,9 +732,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [ 2.7  8.1 16.2]\n",
+      "1 [0.423 1.269 2.538]\n",
+      "2 [0.502695 1.508085 3.01617 ]\n"
+     ]
+    }
+   ],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
@@ -521,9 +772,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [ 2.7  8.1 16.2]\n",
+      "1 [0.423 1.269 2.538]\n",
+      "2 [0.502695 1.508085 3.01617 ]\n"
+     ]
+    }
+   ],
    "source": [
     "reload(loss_functions)\n",
     "I = np.array([[1.5], [4.5], [9]])\n",
