--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named pandas",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3ce0250cb2ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named pandas"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -120,22 +132,26 @@
    "source": [
     "class ANN:\n",
     "\n",
-    "\tdef __init__(self, activation):\n",
+    "\tdef __init__(self, activation, error):\n",
     "\t\tself.act_func = Function.__dict__[activation]\n",
     "\t\tself.act_derivative = Function.__dict__[activation+\"_derivative\"]\n",
+    "\t\tself.err_func = Function.__dict__[error]\n",
+    "\t\tself.err_derivative = Function.__dict__[error+\"_derivative\"]\n",
+    "\t\tself.activations = []\n",
+    "\t\tself.dot_product = []\n",
     "\n",
     "\tdef initialize_random_weights(self, n_input, n_perceptron, n_classes):\n",
     "\t\tself.n_hidden_layers = len(n_perceptron)\n",
     "\n",
-    "\t\tself.hidden_layers = []\n",
-    "\t\tself.activation = []\n",
+    "\t\tself.hidden_layers = []\t\t\n",
     "\n",
     "\t\tfor l in range(self.n_hidden_layers):\n",
     "\t\t\tif (l == 0):\n",
-    "\t\t\t\tw = np.random.rand(n_input+1,n_perceptron[0])\n",
+    "\t\t\t\tw = np.random.rand(n_input+1,n_perceptron[l])\t\t\t\t\n",
     "\t\t\telse:\n",
     "\t\t\t\tw = np.random.rand(n_perceptron[l-1]+1,n_perceptron[l])\n",
     "\t\t\tself.hidden_layers.append(w)\n",
+    "\t\t\t\n",
     "\n",
     "\t\tif (self.n_hidden_layers == 0):\n",
     "\t\t\tself.output_layer = np.random.rand(n_input+1,n_classes)\n",
@@ -158,6 +174,15 @@
     "\t\tprint(\"Output Layer \")\n",
     "\t\tprint(self.output_layer,\"\\n\")\n",
     "\n",
+    "\tdef show_activations(self):\n",
+    "\n",
+    "\t\tfor l in range(self.n_hidden_layers):\n",
+    "\t\t\tprint(\"Hidden Layer \",str(l+1))\n",
+    "\t\t\tprint(self.activations[l],\"\\n\")\n",
+    "\n",
+    "\t\tprint(\"Output Layer \")\n",
+    "\t\tprint(self.activations[self.n_hidden_layers],\"\\n\")\n",
+    "\n",
     "\tdef show_setup(self):\n",
     "\t\t\t\t\n",
     "\t\tprint(\"--- Input size: \",str(self.hidden_layers[0].shape[0]-1))\n",
@@ -169,17 +194,120 @@
     "\n",
     "\tdef foward_propagation(self, X):\n",
     "\n",
+    "\t\tdel self.activations[:]\n",
+    "\n",
+    "\t\tself.activations.append(X)\n",
     "\t\tinp = np.insert(X,0,1,axis=1)\n",
     "\n",
     "\t\tfor l in range(self.n_hidden_layers):\n",
     "\t\t\tout = np.matmul(inp, self.hidden_layers[l])\n",
+    "\t\t\tself.dot_product.append(out)\n",
     "\t\t\tsig = self.act_func(out)\n",
-    "\t\t\tinp = np.insert(sig,0,1,axis=1)\n",
+    "\t\t\tself.activations.append(sig)\n",
+    "\t\t\tinp = np.insert(sig,0,1,axis=1)\t\t\t\n",
     "\n",
     "\t\tout = np.matmul(inp, self.output_layer)\n",
+    "\t\tself.dot_product.append(out)\n",
     "\t\tsig = self.act_func(out)\n",
+    "\t\tself.activations.append(sig)\n",
     "\n",
-    "\t\treturn out,sig\n"
+    "\t\treturn sig\n",
+    "\n",
+    "\tdef backpropagation(self, x, y):\n",
+    "\t\tsig = self.foward_propagation([x])\n",
+    "\t\t#dErr/dAct * dAct/dDot\n",
+    "\t\tdelta1 = self.err_derivative(sig,y) * self.act_derivative(self.dot_product[-1])\t\n",
+    "\t\n",
+    "\t\t#input current layer = output previous layer (inserting bias)\n",
+    "\t\tact = np.insert(self.activations[-2],0,1,axis=1).transpose()\n",
+    "\n",
+    "\t\t#dErr/dAct * dAct/dDot * dDot/dWl\n",
+    "\t\tgrad1 = np.matmul(act,delta1)\n",
+    "\n",
+    "\t\t#Layer (l-1)\n",
+    "\n",
+    "\t\t#dDotK/dAct (no bias)\n",
+    "\t\tdot_act = self.output_layer[1:]\n",
+    "\t\t#dAct/dDot\n",
+    "\t\tact_dot = self.act_derivative(self.dot_product[-2])\n",
+    "\t\tdelta2 = np.multiply(dot_act, act_dot.transpose())\n",
+    "\t\tdelta12 = np.multiply(delta1,delta2)\n",
+    "\t\tdelta12s = delta12.sum(axis=1)\n",
+    "\t\tdelta12s = np.expand_dims(delta12s, axis=0)\n",
+    "\n",
+    "\t\tact = np.insert(self.activations[-3],0,1,axis=1).transpose()\n",
+    "\t\tgrad2 = np.multiply(delta12s, act)\n",
+    "\n",
+    "\t\tgrad3 = None\n",
+    "\t\t#Layer (l-2)\n",
+    "\t\tif(len(self.hidden_layers) > 1):\n",
+    "\t\t\t#dDotK/dAct (no bias)\n",
+    "\t\t\tdot_act = self.hidden_layers[-1][1:]\n",
+    "\t\t\t#dAct/dDot\n",
+    "\t\t\tact_dot = self.act_derivative(self.dot_product[-3])\n",
+    "\t\t\tdelta3 = np.multiply(dot_act, act_dot.transpose())\t\t\n",
+    "\n",
+    "\t\t\tdelta123 = np.array([])\n",
+    "\t\t\tfor l,c in zip(delta12,delta3.transpose()):\n",
+    "\t\t\t\tl = np.expand_dims(l,axis=0)\n",
+    "\t\t\t\tc = np.expand_dims(c,axis=1)\n",
+    "\t\t\t\tmatrix = np.matmul(c,l)\n",
+    "\t\t\t\tdelta123 = delta123+matrix if delta123.size else matrix\n",
+    "\t\t\tdelta123s = delta123.sum(axis=1)\n",
+    "\n",
+    "\t\t\tact = np.insert([x],0,1,axis=1).transpose()\n",
+    "\t\t\tgrad3 = np.multiply(delta123s,act)\n",
+    "\t\t\n",
+    "\t\treturn grad1,grad2,grad3\n",
+    "\n",
+    "\n",
+    "\tdef stochastic_training(self, X, Y, alpha, epochs):\n",
+    "\t\tJ = []\n",
+    "\t\tfor e in range(epochs):\n",
+    "\t\t\tfor x,y in zip(X,Y):\n",
+    "\t\t\t\tgrad1, grad2, grad3 = self.backpropagation(x,y)\t\t\t\n",
+    "\t\t\t\n",
+    "\t\t\t\t#update weights\n",
+    "\t\t\t\tself.output_layer      = self.output_layer      - alpha*grad1\n",
+    "\t\t\t\tself.hidden_layers[-1] = self.hidden_layers[-1] - alpha*grad2\n",
+    "\t\t\t\tif(len(self.hidden_layers) > 1): self.hidden_layers[-2] = self.hidden_layers[-2] - alpha*grad3\n",
+    "\n",
+    "\t\t\t\tsig = self.foward_propagation([x])\n",
+    "\t\t\t\terr = self.err_func(sig,y)\n",
+    "\t\t\t\tJ.append(err)\n",
+    "\t\t\t\t\n",
+    "\t\tplt.plot(J)\t\n",
+    "\t\tplt.ylabel('Error')\n",
+    "\t\tplt.xlabel('iterations')\n",
+    "\t\tplt.show()\n",
+    "\n",
+    "\tdef batch_training(self, X, Y, alpha, epochs):\n",
+    "\t\tJ = []\n",
+    "\t\tfor e in range(epochs):\n",
+    "\t\t\tgrad1s, grad2s, grad3s = np.array([]),np.array([]),np.array([])\n",
+    "\t\t\tfor x,y in zip(X,Y):\n",
+    "\t\t\t\tgrad1, grad2, grad3 = self.backpropagation(x,y)\t\t\t\n",
+    "\t\t\t\tgrad1s = grad1s+grad1 if grad1s.size else grad1\n",
+    "\t\t\t\tgrad2s = grad2s+grad2 if grad2s.size else grad2\n",
+    "\t\t\t\tif grad3: grad3s = grad3s+grad3 if grad3s.size else grad3\n",
+    "\n",
+    "\t\t\tgrad1s = grad1s/X.shape[0]\n",
+    "\t\t\tgrad2s = grad2s/X.shape[0]\n",
+    "\t\t\tgrad3s = grad3s/X.shape[0]\n",
+    "\t\t\t\n",
+    "\t\t\t#update weights\n",
+    "\t\t\tself.output_layer      = self.output_layer      - alpha*grad1s\n",
+    "\t\t\tself.hidden_layers[-1] = self.hidden_layers[-1] - alpha*grad2s\n",
+    "\t\t\tif(len(self.hidden_layers) > 1): self.hidden_layers[-2] = self.hidden_layers[-2] - alpha*grad3s\n",
+    "\n",
+    "\t\t\tsig = self.foward_propagation(X)\n",
+    "\t\t\terr = self.err_func(sig,Y)\n",
+    "\t\t\tJ.append(err.sum()/X.shape[0])\n",
+    "\t\t\t\t\n",
+    "\t\tplt.plot(J)\t\n",
+    "\t\tplt.ylabel('Error')\n",
+    "\t\tplt.xlabel('iterations')\n",
+    "\t\tplt.show()\n"
    ]
   },
   {
@@ -260,14 +388,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
