Added ReLu as a function, along with more tests for determinate the convergence rate of a fixed architecture in 10 epochs

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -11,19 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named pandas",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-3ce0250cb2ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named pandas"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -126,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,14 +308,14 @@
      "output_type": "stream",
      "text": [
       "Hidden Layer  1\n",
-      "[[0.02814177 0.15377794]\n",
-      " [0.94466117 0.16724318]\n",
-      " [0.70835274 0.26635948]] \n",
+      "[[0.84379971 0.15851025]\n",
+      " [0.31700029 0.87052709]\n",
+      " [0.02541348 0.99259214]] \n",
       "\n",
       "Output Layer \n",
-      "[[0.61027349 0.4320716 ]\n",
-      " [0.58187071 0.94202937]\n",
-      " [0.43493681 0.22798961]] \n",
+      "[[0.50301023 0.78118819]\n",
+      " [0.71366618 0.5281667 ]\n",
+      " [0.30889682 0.87353862]] \n",
       "\n",
       "--- Input size:  2\n",
       "--- Number of hidden layers:  1\n",
@@ -336,12 +324,10 @@
       "--- Number of classes: 2 \n",
       "\n",
       "Y\n",
-      " [[1.44832431 1.45489365]\n",
-      " [1.55913052 1.56433779]]\n",
+      " [0.79370361 0.88296932]\n",
       "\n",
       "a(Y)\n",
-      " [[0.80974041 0.81075043]\n",
-      " [0.82622855 0.82697492]]\n"
+      " [0.80722329 0.89215366]\n"
      ]
     }
    ],
@@ -351,7 +337,7 @@
     "#----------------------------------\n",
     "\n",
     "# Random Init\n",
-    "teste = ANN(\"act_Sigmoid\")\n",
+    "teste = ANN(\"act_Sigmoid\", 'err_SMD')\n",
     "teste.initialize_random_weights(2, [2], 2)\n",
     "teste.show_weights()\n",
     "teste.show_setup()\n",
@@ -377,6 +363,13 @@
     "print(\"Y\\n\",Y)\n",
     "print(\"\\na(Y)\\n\",aY)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -388,14 +381,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
