--- a/notebooks/EDA - Fashion Mnist.ipynb
+++ b/notebooks/EDA - Fashion Mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -20,24 +20,24 @@
     "import os\n",
     "import math\n",
     "\n",
-    "base_dir = './data/fashion'\n",
+    "base_dir = '../data/fashion'\n",
     "print(os.listdir(base_dir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import mnist_reader\n",
-    "X_train, y_train = mnist_reader.load_mnist('data/fashion', kind='train')\n",
-    "X_test, y_test = mnist_reader.load_mnist('data/fashion', kind='t10k')"
+    "X_train, y_train = mnist_reader.load_mnist('../data/fashion', kind='train')\n",
+    "X_test, y_test = mnist_reader.load_mnist('../data/fashion', kind='t10k')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -46,13 +46,33 @@
        "(dtype('uint8'), dtype('uint8'), dtype('uint8'), dtype('uint8'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train.dtype, y_train.dtype, X_test.dtype, y_test.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 784)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
    ]
   },
   {
@@ -263,6 +283,98 @@
    "source": [
     "## TSNE Analysis\n",
     "From the plot is possible to see that the scaling had no effect on the class visualization after the TSNE, there are some classes with a big confusion such as (6, 4 and 2). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary\n",
+      "-------------------------------\n",
+      "H1      (input=784, neurons=128, activation=sigmoid)\n",
+      "H2      (input=128, neurons=256, activation=sigmoid)\n",
+      "H3      (input=256, neurons=96, activation=sigmoid)\n",
+      "Output  (input=96, neurons=10, activation=sigmoid)\n",
+      "-------------------------------\n",
+      "\n",
+      "Shuffled\n",
+      "It: 10000 Batch: 10000 Epoch 0 Error: 3.25050465 lr: 0.100000 \n",
+      "It: 20000 Batch: 20000 Epoch 0 Error: 3.25082973 lr: 0.100000 \n",
+      "It: 30000 Batch: 30000 Epoch 0 Error: 3.25082973 lr: 0.100000 \n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys \n",
+    "sys.path.append('../')\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from NN import network, activation_functions, loss_functions\n",
+    "from NN import ANN\n",
+    "\n",
+    "import time\n",
+    "import timeit\n",
+    "from utils import dataset_helper\n",
+    "from utils import custom_scores\n",
+    "nclasses=10\n",
+    "eps = np.finfo(np.float32).eps\n",
+    "X = X_train\n",
+    "Y = y_train\n",
+    "Y = dataset_helper.one_hot_encode(Y, nclasses)\n",
+    "nfeatures = X.shape[1]\n",
+    "lr = .1\n",
+    "max_iter = 20 * X.shape[0]\n",
+    "print_interval = 10*1000\n",
+    "\n",
+    "network.DEBUG = False\n",
+    "\n",
+    "eps = np.finfo(np.float32).eps\n",
+    "\n",
+    "h1 = network.Layer(nfeatures, 128, 'sigmoid',  label=\"H1\")\n",
+    "h2 = network.Layer(128, 256, 'sigmoid',  label=\"H2\")\n",
+    "h3 = network.Layer(256, 96, 'sigmoid', label=\"H3\")\n",
+    "o = network.Layer(96, nclasses, 'sigmoid', label=\"Output\")\n",
+    "\n",
+    "model = network.NN(loss='cross_entropy')\n",
+    "model.add_layer(h1)\n",
+    "model.add_layer(h2)\n",
+    "model.add_layer(h3)\n",
+    "model.add_layer(o)\n",
+    "model.summary()\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "start = time.process_time()\n",
+    "model.fit(X, Y, max_iter=max_iter, \n",
+    "          lr=lr, epsilon=eps, b_sz = 1,\n",
+    "          decay_iteractions= 2.5 * X.shape[0], decay_rate = 0.9,\n",
+    "#           X_val=X_val, Y_val=Y_val,\n",
+    "          print_interval=print_interval)\n",
+    "\n",
+    "# Y_ = np.array(model.predict(X))\n",
+    "# Y_ = Y_.argmax(axis=-1).flatten()\n",
+    "# mae = np.absolute(Y.argmax(axis=-1) - Y_).mean()\n",
+    "\n",
+    "# print(\"Time Spent \", time.process_time() - start)\n",
+    "\n",
+    "\n",
+    "# Y_val_ = np.array(model.predict(X_val))\n",
+    "# iteraction_log = network.get_iteration_log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y.shape"
    ]
   },
   {
