Fixed the full batch update for the SGD

--- a/notebooks/ANN_Test.ipynb
+++ b/notebooks/ANN_Test.ipynb
@@ -345,7 +345,7 @@
     "h = network.Layer(2, 3, 'sigmoid', bias=0.35, label=\"H1\")\n",
     "o = network.Layer(3, 2, 'sigmoid', bias=0.6, label=\"Output\")\n",
     "\n",
-    "model = network.NN(loss='cross_entropy')\n",
+    "model = network.NN(loss='smd')\n",
     "model.add_layer(h)\n",
     "model.add_layer(o)\n",
     "model.show_weights()\n",
