Code cleaning and notebook re-run for the primary experiments

--- a/notebooks/Experiments - Round 1.ipynb
+++ b/notebooks/Experiments - Round 1.ipynb
@@ -299,7 +299,7 @@
     "                      )\n",
     "print(\"Time Spent \", time.process_time() - start)\n",
     "y_pred = classify(theta, X_val, binary=False)\n",
-    "evalute_multiclass(y_val, y_pred)"
+    "evaluate_multiclass(y_val, y_pred)"
    ]
   },
   {
@@ -675,7 +675,7 @@
     "                      )\n",
     "print(\"Time Spent \", time.process_time() - start)\n",
     "y_pred = classify(theta, X_val, binary=False)\n",
-    "evalute_multiclass(y_val, y_pred)"
+    "evaluate_multiclass(y_val, y_pred)"
    ]
   },
   {
@@ -1163,7 +1163,7 @@
     "                      )\n",
     "print(\"Time Spent \", time.process_time() - start)\n",
     "y_pred = classify(theta, X_val, binary=False)\n",
-    "evalute_multiclass(y_val, y_pred)"
+    "evaluate_multiclass(y_val, y_pred)"
    ]
   },
   {
@@ -1651,7 +1651,7 @@
     "                      )\n",
     "print(\"Time Spent \", time.process_time() - start)\n",
     "y_pred = classify(theta, X_val, binary=False)\n",
-    "evalute_multiclass(y_val, y_pred)"
+    "evaluate_multiclass(y_val, y_pred)"
    ]
   },
   {
