--- a/notebooks/Neural Network - Experiments Round 5.ipynb
+++ b/notebooks/Neural Network - Experiments Round 5.ipynb
@@ -8,7 +8,7 @@
     "Then we fixed the parameters: \n",
     "* learning rate - 0.0001\n",
     "* batch size - 256\n",
-    "* architectures - 128 -> 100 vs 256 -> 100 vs 128 -> 256 -> 100 vs \n",
+    "* architectures - 128 -> 100 vs 256 -> 100 vs 512 -> 100 vs 128 -> 256 -> 100 \n",
     "* activation function - relu \n",
     "* epochs - 200\n",
     "* Same train and validation sets\n",
@@ -440,6 +440,52 @@
     "\n",
     "h1 = network.Layer(nfeatures, 256, 'relu',  label=\"H1\")\n",
     "h2 = network.Layer(256, 100, 'relu',  label=\"H2\")\n",
+    "o1 = network.Layer(100, nclasses, 'softmax', label=\"soft\")\n",
+    "\n",
+    "model = network.NN(loss='cross_entropy')\n",
+    "model.add_layer(h1)\n",
+    "model.add_layer(h2)\n",
+    "model.add_layer(o1)\n",
+    "model.summary()\n",
+    "\n",
+    "print(\"\")\n",
+    "model.fit(X_train, y_train, max_iter=max_iter, \n",
+    "          lr=lr, epsilon=eps, b_sz = b_sz,\n",
+    "          X_val=X_val, Y_val=y_val,\n",
+    "          print_interval=print_interval)\n",
+    "iteraction_log = network.get_iteration_log()\n",
+    "\n",
+    "Y_ = np.array(model.predict(X_val)).argmax(axis=-1)\n",
+    "reload(custom_scores)\n",
+    "custom_scores.evaluate_multiclass(y_val=y_val.argmax(axis=-1), y_pred=Y_)\n",
+    "iteraction_log.index = iteraction_log.it\n",
+    "iteraction_log.error_train.plot()\n",
+    "iteraction_log.error_val.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 512 -> 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(custom_scores)\n",
+    "reload(dataset_helper)\n",
+    "reload(loss_functions)\n",
+    "reload(activation_functions)\n",
+    "reload(network)\n",
+    "reload(dataset_helper)\n",
+    "\n",
+    "\n",
+    "h1 = network.Layer(nfeatures, 512, 'relu',  label=\"H1\")\n",
+    "h2 = network.Layer(512, 100, 'relu',  label=\"H2\")\n",
     "o1 = network.Layer(100, nclasses, 'softmax', label=\"soft\")\n",
     "\n",
     "model = network.NN(loss='cross_entropy')\n",
