Added readme texts for the neural network experiments

--- a/notebooks/Neural Network - Experiments Round 5.ipynb
+++ b/notebooks/Neural Network - Experiments Round 5.ipynb
@@ -474,7 +474,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary\n",
+      "-------------------------------\n",
+      "H1      (input=784, neurons=512, activation=relu)\n",
+      "H2      (input=512, neurons=100, activation=relu)\n",
+      "soft    (input=100, neurons=10, activation=softmax)\n",
+      "-------------------------------\n",
+      "\n",
+      "Shuffled\n",
+      "It: 1870 Batch: 178 Epoch 9 Train Loss: 0.08744805 lr: 0.000100 Val Loss: 0.07328151 Val Acc 0.85125000\n",
+      "It: 3740 Batch: 168 Epoch 19 Train Loss: 0.06571282 lr: 0.000100 Val Loss: 0.06455735 Val Acc 0.86875000\n",
+      "It: 5610 Batch: 158 Epoch 29 Train Loss: 0.05868097 lr: 0.000100 Val Loss: 0.06186346 Val Acc 0.87708333\n",
+      "It: 7480 Batch: 148 Epoch 39 Train Loss: 0.05349814 lr: 0.000100 Val Loss: 0.06080296 Val Acc 0.87666667\n",
+      "It: 9350 Batch: 138 Epoch 49 Train Loss: 0.04943226 lr: 0.000100 Val Loss: 0.05672865 Val Acc 0.88650000\n",
+      "It: 11220 Batch: 128 Epoch 59 Train Loss: 0.04588457 lr: 0.000100 Val Loss: 0.05807243 Val Acc 0.88300000\n",
+      "It: 13090 Batch: 118 Epoch 69 Train Loss: 0.04260763 lr: 0.000100 Val Loss: 0.05776594 Val Acc 0.88475000\n",
+      "It: 14960 Batch: 108 Epoch 79 Train Loss: 0.03980252 lr: 0.000100 Val Loss: 0.05435564 Val Acc 0.88875000\n",
+      "It: 16830 Batch: 98 Epoch 89 Train Loss: 0.03734611 lr: 0.000100 Val Loss: 0.05563212 Val Acc 0.88858333\n",
+      "It: 18700 Batch: 88 Epoch 99 Train Loss: 0.03485947 lr: 0.000100 Val Loss: 0.06371419 Val Acc 0.87925000\n",
+      "It: 20570 Batch: 78 Epoch 109 Train Loss: 0.03267279 lr: 0.000100 Val Loss: 0.05435490 Val Acc 0.89450000\n",
+      "It: 22440 Batch: 68 Epoch 119 Train Loss: 0.03040016 lr: 0.000100 Val Loss: 0.05214807 Val Acc 0.89700000\n",
+      "It: 24310 Batch: 58 Epoch 129 Train Loss: 0.02830694 lr: 0.000100 Val Loss: 0.05645542 Val Acc 0.88900000\n",
+      "It: 26180 Batch: 48 Epoch 139 Train Loss: 0.02636167 lr: 0.000100 Val Loss: 0.05465471 Val Acc 0.89333333\n"
+     ]
+    }
+   ],
    "source": [
     "reload(custom_scores)\n",
     "reload(dataset_helper)\n",
